# beerbox-apibox

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: commits.yaml  lint_codebase.yaml  lint_pull_request.yaml  main.yaml  pull_request.yaml  release.yaml
migrations/: alembic.ini  env.py
migrations/versions/: 20221105_8a0f306d9814.py  20221106_2d8cd6161e9d.py
scripts/: commit-msg.sh  lint-codebase  lint-commit  lint-commit-message  pre-commit.sh  serve
scripts/hooks/: commit-msg
src/apibox/: config.py  main.py
src/apibox/application/: health.py
src/apibox/application/api/: app.py  exception_handlers.py  response.py
src/apibox/application/cli/: app.py
src/apibox/domain/: boxes.py  contributions.py  users.py
src/apibox/infrastructure/database/: engine.py  health.py  session.py
src/apibox/utils/: identifiers.py  strings.py
src/beerbox/: config.py  main.py
src/beerbox/application/: health.py
src/beerbox/application/api/: app.py  exception_handlers.py  response.py
src/beerbox/domain/: contributions.py  users.py
src/beerbox/utils/: identifiers.py  strings.py
tests/: factories.py  utils.py
tests/component/: conftest.py  test_boxes.py  test_contributions.py  test_health.py  test_users.py
tests/integration/: conftest.py  test_cli.py  test_database.py  test_resources_boxes.py  test_resources_contributions.py  test_resources_health.py  test_resources_users.py
tests/unit/: conftest.py  test_main.py  test_utils.py
tests/unit/application/: test_health.py
tests/unit/domain/: test_boxes.py  test_contributions.py  test_users.py
tests/unit/infrastructure/: test_database.py
(+57 files in other folders)
